--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@
   
   /* album  */
   
-  .albums-container {
+  .albums-card-container {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 40px 0;
